# argon2-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh
src/: lib.rs
tests/unit/: test_bindings.js
